# networking-vsphere

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Congress.tokens  HACKING.rst  README.md  README.rst  index.html  index.html.1  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/: nova.patch
devstack/: README.rst  plugin.sh  settings
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: nginx-default  ngnix-default
etc/init/: neutron-ovsvapp-agent-monitor.conf  neutron-ovsvapp-agent.conf
etc/neutron/: ml2_conf_vmware_dvs.ini
networking_vsphere/: __init__.py  _i18n.py  service.py
networking_vsphere/agent/: __init__.py  agent.py  dvs_neutron_agent.py  ovsvapp_agent.py  ovsvapp_agent.py.bak  ovsvapp_dvr_agent.py  ovsvapp_sg_agent.py
networking_vsphere/common/: config.py  constants.py  dvs_agent_rpc_api.py  error.py  exceptions.py  model.py  utils.py  vmware_conf.py
networking_vsphere/db/: ovsvapp_db.py  ovsvapp_models.py
networking_vsphere/drivers/: base_manager.py  driver.py  dvs_driver.py  manager.py  ovs_firewall.py  vc_driver.py  vss_driver.py
networking_vsphere/extensions/: __init__.py  mitigated_cluster.py  ovsvapp_cluster.py  ovsvapp_mitigated_cluster.py  vcenter_cluster.py
networking_vsphere/ml2/: dvs_mechanism_driver.py  mech_driver.py  ovsvapp_driver.py  ovsvapp_mech_driver.py  ovsvapp_rpc.py
networking_vsphere/monitor/: monitor.py  ovsvapp-agent-monitor.sh  ovsvapp_monitor.py
networking_vsphere/networking_vsphere_client/: _mitigated_cluster.py  _vcenter_cluster.py
networking_vsphere/neutronclient/: _mitigated_cluster.py  _ovsvapp_cluster.py  _ovsvapp_mitigated_cluster.py  _vcenter_cluster.py
networking_vsphere/tests/: base.py  (+1 more)
(+219 files in other folders)
