[metadata]
name = networking-vsphere
version = 2015.1
summary = A set of Neutron drivers and agents to manage vSphere clusters.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_vsphere
data_files =
    etc/neutron =
        etc/neutron/plugins/ovsvapp/ovsvapp_agent.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ovsvapp = networking_vsphere.plugins.ml2.drivers.ovsvapp.mech_driver:OVSvAppAgentMechanismDriver
    dvs = networking_vsphere.plugins.ml2.drivers.mech_dvs.driver:VMwareDVSMechanismDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_vsphere/locale
domain = networking-vsphere

[update_catalog]
domain = networking-vsphere
output_dir = networking_vsphere/locale
input_file = networking_vsphere/locale/networking-vsphere.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_vsphere/locale/networking-vsphere.pot
